# MINERvANeutronPurity

./: All1DIntTypeStackedPlots.cxx  All1DIntTypeStackedPlots_SignalBKG.cxx  CMakeLists.txt  EventLoop.cxx  HokeyPlottingMacro.C  OLDPlottingCode.txt  README  TestLoop.cxx  testExecutable.cxx
playlists/: playlist_6A_nuke_runs_126000_126025_June_2021_merged.txt  playlist_6A_nuke_runs_126000_126100_June_2021_merged.txt  playlist_6A_nuke_runs_126025_126050_June_2021_merged.txt  playlist_6A_nuke_runs_126050_126075_June_2021_merged.txt  playlist_6A_nuke_runs_126075_126100_June_2021_merged.txt  playlist_6D_04_28_2021.txt  playlist_6D_half.txt
syst/: CVUniverse.h  NTracksShiftUniverse.h  Universe.h
